@@ -1,27 +1,30 @@
 import sys
 import unittest
 from StringIO import StringIO
-from superlance.tests.dummy import *
 from superlance.memmon import memmon_from_args
 from superlance.memmon import seconds_size
-from superlance.tests.dummy import *
+from superlance.tests.dummy import DummyRPCServer
 
 class MemmonTests(unittest.TestCase):
     def _getTargetClass(self):
         from superlance.memmon import Memmon
         return Memmon
 
-    def _makeOne(self, *opts):
-        return self._getTargetClass()(*opts)
+    def _makeOne(self, *args, **kwargs):
+        return self._getTargetClass()(*args, **kwargs)
 
-    def _makeOnePopulated(self, programs, groups, any):
-        rpc = DummyRPCServer()
-        cumulative = False
-        sendmail = 'cat - > /dev/null'
-        email = 'chrism@plope.com'
-        name = 'test'
-        uptime_limit = 2000
-        memmon = self._makeOne(cumulative, programs, groups, any, sendmail, email, uptime_limit, name, rpc)
+    def _makeOnePopulated(self, programs, groups, any, name=None):
+        memmon = self._makeOne(
+            programs=programs,
+            groups=groups,
+            any=any,
+            name=name,
+            rpc=DummyRPCServer(),
+            cumulative=False,
+            sendmail='cat - > /dev/null',
+            email='chrism@plope.com',
+            email_uptime_limit=2000,
+            )
         memmon.stdin = StringIO()
         memmon.stdout = StringIO()
         memmon.stderr = StringIO()
@@ -60,7 +63,7 @@ class MemmonTests(unittest.TestCase):
         self.assertEqual(len(mailed), 4)
         self.assertEqual(mailed[0], 'To: chrism@plope.com')
         self.assertEqual(mailed[1],
-                         'Subject: memmon [test]: process baz:baz_01 restarted')
+                         'Subject: memmon: process baz:baz_01 restarted')
         self.assertEqual(mailed[2], '')
         self.failUnless(mailed[3].startswith('memmon.py restarted'))
 
@@ -82,7 +85,7 @@ class MemmonTests(unittest.TestCase):
         self.assertEqual(len(mailed), 4)
         self.assertEqual(mailed[0], 'To: chrism@plope.com')
         self.assertEqual(mailed[1],
-          'Subject: memmon [test]: process foo:foo restarted')
+          'Subject: memmon: process foo:foo restarted')
         self.assertEqual(mailed[2], '')
         self.failUnless(mailed[3].startswith('memmon.py restarted'))
 
@@ -128,7 +131,7 @@ class MemmonTests(unittest.TestCase):
         self.assertEqual(len(mailed), 4)
         self.assertEqual(mailed[0], 'To: chrism@plope.com')
         self.assertEqual(mailed[1],
-                         'Subject: memmon [test]: process baz:baz_01 restarted')
+                         'Subject: memmon: process baz:baz_01 restarted')
         self.assertEqual(mailed[2], '')
         self.failUnless(mailed[3].startswith('memmon.py restarted'))
 
@@ -194,19 +197,20 @@ class MemmonTests(unittest.TestCase):
         self.assertEqual(len(mailed), 4)
         self.assertEqual(mailed[0], 'To: chrism@plope.com')
         self.assertEqual(mailed[1],
-          'Subject: memmon [test]: failed to stop process BAD_NAME:BAD_NAME, exiting')
+          'Subject: memmon: failed to stop process BAD_NAME:BAD_NAME, exiting')
         self.assertEqual(mailed[2], '')
         self.failUnless(mailed[3].startswith('Failed'))
 
     def test_subject_no_name(self):
-        """set the name to None to check if subject
-        stays `memmon:...` instead `memmon [<name>]:...`
+        """set the name to None to check if subject formats to:
+        memmon: %(subject)s
         """
-        programs = {}
-        groups = {}
-        any = 0
-        memmon = self._makeOnePopulated(programs, groups, any)
-        memmon.memmonName = None
+        memmon = self._makeOnePopulated(
+            programs={},
+            groups={},
+            any=0,
+            name=None,
+            )
         memmon.stdin.write('eventname:TICK len:0\n')
         memmon.stdin.seek(0)
         memmon.runforever(test=True)
@@ -214,6 +218,24 @@ class MemmonTests(unittest.TestCase):
         mailed = memmon.mailed.split('\n')
         self.assertEqual(mailed[1],
           'Subject: memmon: process baz:baz_01 restarted')
+
+    def test_subject_with_name(self):
+        """set the name to a string to check if subject formats to:
+        memmon [%(name)s]: %(subject)s
+        """
+        memmon = self._makeOnePopulated(
+            programs={},
+            groups={},
+            any=0,
+            name='thinko',
+            )
+        memmon.stdin.write('eventname:TICK len:0\n')
+        memmon.stdin.seek(0)
+        memmon.runforever(test=True)
+
+        mailed = memmon.mailed.split('\n')
+        self.assertEqual(mailed[1],
+          'Subject: memmon [thinko]: process baz:baz_01 restarted')
 
     def test_parse_uptime(self):
         """test parsing of time parameter for uptime
@@ -346,7 +368,7 @@ class MemmonTests(unittest.TestCase):
         self.assertEqual(memmon.sendmail, 'mutt')
         self.assertEqual(memmon.email, 'me@you.com')
         self.assertEqual(memmon.email_uptime_limit, 1 * 24 * 60 * 60)
-        self.assertEqual(memmon.memmonName, 'myproject')
+        self.assertEqual(memmon.name, 'myproject')
 
 
         #default arguments
@@ -358,7 +380,7 @@ class MemmonTests(unittest.TestCase):
         self.assertEqual(memmon.any, None)
         self.assertTrue('sendmail' in memmon.sendmail, 'not using sendmail as default')
         self.assertEqual(memmon.email_uptime_limit, sys.maxint)
-        self.assertEqual(memmon.memmonName, None)
+        self.assertEqual(memmon.name, None)
 
         arguments = ['-p', 'foo=50MB']
         memmon = memmon_from_args(arguments)
