@@ -8,6 +8,8 @@
 - ``httpok`` now allows multiple expected status codes to be specified.  Patch
   by valmiRe.
 
+- ``httpok`` now has a ``--name`` option like ``memmon``.
+
 0.12 (2016-09-03)
 -----------------
 
